add new feature

--- a/index.html
+++ b/index.html
@@ -3,30 +3,47 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Life Dashboard</title>
+    <title>My Life Dashboard</title>
     <link rel="stylesheet" href="color.css" />
   </head>
   <body>
     <header>
-      <h1>My Daily Dashboard</h1>
+      <h1>Welcome, <span id="username">User</span>!</h1>
+      <button id="theme-toggle">🌙 Dark Mode</button>
     </header>
-    <main class="dashboard">
-      <!-- Widget 1: Clock -->
+
+    <div class="dashboard">
+      <!-- Clock Widget -->
       <div class="widget clock-widget">
-        <h2>🕒 Time</h2>
-        <div id="clock"></div>
+        <h2>⏰ Live Clock</h2>
+        <div id="clock">00:00:00</div>
+        <div id="date">January 1, 2025</div>
       </div>
 
-      <!-- Widget 2: To-Do -->
+      <!-- To-Do Widget -->
       <div class="widget todo-widget">
         <h2>📝 To-Do List</h2>
-        <div class="todo-input">
-          <input type="text" id="todo-input" placeholder="Add task..." />
-          <button id="add-btn">Add</button>
-        </div>
-        <ul id="todo-list"></ul>
+        <input type="text" id="task-input" placeholder="Add task..." />
+        <button id="add-task">Add</button>
+        <ul id="task-list"></ul>
       </div>
-    </main>
+
+      <!-- Weather Widget -->
+      <div class="widget weather-widget">
+        <h2>⛅ Weather</h2>
+        <div id="weather-info">Loading...</div>
+      </div>
+
+      <!-- Quote Widget -->
+      <div class="widget quote-widget">
+        <h2>💬 Daily Quote</h2>
+        <p id="quote-text">
+          "The journey of a thousand miles begins with one step."
+        </p>
+        <p id="quote-author">— Lao Tzu</p>
+      </div>
+    </div>
+
     <script src="main.js"></script>
   </body>
 </html>
