add a new style

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <h1>Welcome, <span id="username">User</span>!</h1>
-      <button id="theme-toggle">🌙 Dark Mode</button>
+      <button class="dark-mode" id="theme-toggle">🌙 Dark Mode</button>
     </header>
 
     <div class="dashboard">
@@ -24,7 +24,7 @@
       <div class="widget todo-widget">
         <h2>📝 To-Do List</h2>
         <input type="text" id="task-input" placeholder="Add task..." />
-        <button id="add-task">Add</button>
+        <button class="add-task" id="add-task">Add</button>
         <ul id="task-list"></ul>
       </div>
 
