--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <body>
     <header>
       <h1>Welcome, <span id="username">User</span>!</h1>
+
+      <button class="singUp"><a href="./form/index.html">Sing up</a></button>
       <button class="dark-mode" id="theme-toggle">🌙 Dark Mode</button>
     </header>
 
