add new calenter  and new style in my small project

--- a/index.html
+++ b/index.html
@@ -39,6 +39,23 @@
       <!-- Weather Widget -->
       <div class="widget">
         <h2>📅 Mini Calendar</h2>
+        <div class="calendar">
+          <div class="header">
+            <button id="prev">&lt;</button>
+            <div id="month-year"></div>
+            <button id="next">&gt;</button>
+          </div>
+          <div class="weekdays">
+            <div>Sun</div>
+            <div>Mon</div>
+            <div>Tue</div>
+            <div>Wed</div>
+            <div>Thu</div>
+            <div>Fri</div>
+            <div>Sat</div>
+          </div>
+          <div id="dates" class="dates"></div>
+        </div>
         <div id="mini-calendar"></div>
       </div>
 
