add a add-habit section

--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
       <div class="widget">
         <h2>🎯 Habit Tracker</h2>
         <div id="habit-tracker"></div>
+        <div class="add-habit">
+          <input type="text" id="habitInput" placeholder="New Habit" />
+          <button class="add-task" onclick="addHabit()">Add</button>
+        </div>
+        <div id="habitList"></div>
       </div>
     </div>
     <div class="widget habit-widget">
